--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-wp-bump",
-  "version": "0.2.0",
-  "description": "Gulp plugin to revise CSS and JS assets within a Wordpress theme's functions.php file",
+  "version": "0.2.1",
+  "description": "Gulp plugin that bumps CSS and JS asset versions within a Wordpress theme's functions.php file",
   "author": "justanother.io admin@justanother.io http://justanother.io",
   "homepage": "https://github.com/justanotherio/gulp-wp-bump#readme",
   "license": "MIT",
